<resources>
    <string name="app_name">Tez Hisob</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tez_hisob">Tez Hisob</string>
    <string name="about">   Bu o\'yinda siz qo\'shish bo\'yicha misollarni ishlashingiz mumkun\n   Bu o\'yin AIML jamoasi tomonidan ishlab chiqarildi!!!</string>
    <string name="level">Bosqichni tanlang:</string>
    <string name="test">test</string>
    <string name="oson">Oson</string>
    <string name="o_rta">O\'rta</string>
    <string name="qiyin">Qiyin</string>
    <string name="_14">14</string>
    <string name="_00_00">00:00</string>
    <string name="_9">9</string>
    <string name="_soroq">\?</string>
    <string name="to_g_ri_javobni_tanlang">To\'g\'ri javobni tanlang:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="tushundim">Tushundim</string>
    <string name="pragressAnswer">To\'g\'ri javoblar soni: %s (minimum javoblar %s)</string>
    <string name="to_gri_javoblar_foizda_s_minumum_s">To\'gri javoblar foizda: %s</string>
    <string name="required_score">Zarur bo\'lgan ball: %s</string>
    <string name="score_answer">Yig\'ilgan ball: %s</string>
    <string name="required_percent">Zarur bo\'lgan to\'g\'ri javoblar foizi: %s</string>
    <string name="yana">Yana</string>
</resources>