<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.LevelFragment">

    <TextView
        android:id="@+id/level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<androidx.appcompat.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/test"
    android:layout_margin="15dp"
    android:textAllCaps="false"
    android:visibility="gone"
    android:textColor="@color/white"
    android:textSize="25sp"
    android:background="@color/purple_500"
    app:layout_constraintTop_toBottomOf="@id/level"
    android:id="@+id/test"/>

<androidx.appcompat.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/oson"
    android:textAllCaps="false"
    android:layout_margin="15dp"
    android:textColor="@color/white"
    android:textSize="25sp"
    android:background="#00FF0A"
    app:layout_constraintTop_toBottomOf="@id/test"
    android:id="@+id/oson"/>

<androidx.appcompat.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/o_rta"
    android:textAllCaps="false"
    android:layout_margin="15dp"
    android:textColor="@color/white"
    android:textSize="25sp"
    android:background="#FF9800"
    app:layout_constraintTop_toBottomOf="@id/oson"
    android:id="@+id/orta"/>

<androidx.appcompat.widget.AppCompatButton
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/qiyin"
    android:textAllCaps="false"
    android:layout_margin="15dp"
    android:textColor="@color/white"
    android:textSize="25sp"
    android:background="#FF1100"
    app:layout_constraintTop_toBottomOf="@id/orta"
    android:id="@+id/qiyin"/>

</androidx.constraintlayout.widget.ConstraintLayout>