<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.fragment.GameFragment">

    <TextView
        android:id="@+id/vaqt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_00_00"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/yigindi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yigindi"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/item_quession"
        android:text="@string/_14"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yigindi">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/answer"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:background="@drawable/item_answer"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:background="@drawable/item_answer"
            android:text="@string/_soroq"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_g_ri_javobni_tanlang"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/progress">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#89FF00"
            android:text="@string/_1"
            android:id="@+id/var1"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF9800"
            android:text="@string/_2"
            android:id="@+id/var2"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:id="@+id/var3"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:background="@color/purple_500"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:id="@+id/var4"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:background="@color/teal_200"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F44336"
            android:text="@string/_5"
            android:id="@+id/var5"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/teal_700"
            android:layout_weight="1"
            android:id="@+id/var6"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:text="@string/_6"/>
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>