<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/background_light"
    >

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="48dp"
        android:id="@+id/emoji"
        app:layout_constraintBottom_toTopOf="@id/min_ball"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_smile"
        />
    <TextView
        android:id="@+id/min_ball"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/required_score"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <TextView
        android:id="@+id/score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/score_answer"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/required_percent"
        app:layout_constraintEnd_toEndOf="@id/min_ball"
        app:layout_constraintStart_toStartOf="@id/min_ball"
        app:layout_constraintTop_toBottomOf="@id/min_ball"

        />

    <TextView
        android:id="@+id/required_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/required_percent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/score_percent"
        app:layout_constraintEnd_toEndOf="@id/min_ball"
        app:layout_constraintStart_toStartOf="@id/min_ball"
        app:layout_constraintTop_toBottomOf="@id/score"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <TextView
        android:id="@+id/score_percent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/to_gri_javoblar_foizda_s_minumum_s"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/min_ball"
        app:layout_constraintStart_toStartOf="@id/min_ball"
        app:layout_constraintTop_toBottomOf="@id/required_percent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yana"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:background="@drawable/item_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>